--- a/arch/arm/configs/jf_defconfig
+++ b/arch/arm/configs/jf_defconfig
@@ -741,7 +741,7 @@ CONFIG_SEC_GPIO_DVS=y
 
 CONFIG_INPUT_KEYCHORD=y
 
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 
 CONFIG_IOSCHED_TEST=y
 CONFIG_MSM_RESET_MODEM=y
