--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -111,7 +111,7 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 
 config CPU_FREQ_DEFAULT_GOV_ASSWAX
             bool "asswax"
-            select CPU_FREQ_GOV_PEGASUSQ
+            select CPU_FREQ_GOV_ASSWAX
             help
               Use the CPUFreq governor 'asswax' as default.
 
