--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -184,6 +184,21 @@ config CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS
 	     governor. If unsure have a look at the help section of the
 	     driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
+	bool "nightmare"
+	select CPU_FREQ_GOV_NIGHTMARE
+	help
+
+config CPU_FREQ_DEFAULT_GOV_DARKNESS
+	bool "darkness"
+  	select CPU_FREQ_GOV_DARKNESS
+  	help
+
+config CPU_FREQ_DEFAULT_GOV_ALUCARD
+  	bool "alucard"
+  	select CPU_FREQ_GOV_ALUCARD
+  	help
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -373,8 +388,20 @@ config CPU_FREQ_GOV_ONDEMANDPLUS
 	 If in doubt, say N.
 
 config CPU_FREQ_GOV_WHEATLEY
-	   tristate "'wheatley' cpufreq governor"
-	   depends on CPU_FREQ
+	 tristate "'wheatley' cpufreq governor"
+	 depends on CPU_FREQ
+
+config CPU_FREQ_GOV_NIGHTMARE
+	tristate "'nightmare' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_DARKNESS
+	tristate "'darkness' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_ALUCARD
+	tristate "'alucard' cpufreq governor"
+	depends on CPU_FREQ
 
 config SEC_DVFS
 	bool "DVFS job"
